--- a/src/app/components/login-form/login-form.component.html
+++ b/src/app/components/login-form/login-form.component.html
@@ -13,6 +13,7 @@
         <span class="col">
           <input class="form-control form-control-sm" formControlName="login" id="login" name="login" type="text">
           <h6 *ngIf="!loginValid() && submitted" class="text-danger mt-2 pl-1">Invalid login</h6>
+          <h6 *ngIf="error" class="text-danger mt-2 pl-1">{{error}}</h6>
         </span>
       </div>
       <div class="row mt-3">
