--- a/src/app/components/pages/recipe-details/recipe-details.component.html
+++ b/src/app/components/pages/recipe-details/recipe-details.component.html
@@ -44,7 +44,7 @@
       <ng-container *ngIf="steps && steps.length; else noSteps">
         <ul>
           <ng-container *ngFor="let step of steps">
-            <li class="text-left">
+            <li class="text-left mb-2">
               {{step.step}}
             </li>
           </ng-container>
