--- a/src/app/components/recipe-search-bar/recipe-search-bar.component.html
+++ b/src/app/components/recipe-search-bar/recipe-search-bar.component.html
@@ -5,6 +5,6 @@
   </button>
   <input #loginElement="ngModel" [(ngModel)]="userSearch" class="border-0 bg-transparent align-middle"
          id="userSearch" minlength="3" name="userSearch"
-         placeholder="Search a recipe, ingredient, ... (you can try cookie, tart, poulet)"
+         placeholder="Cookie, tarte, poulet, any, ..."
          required style="width: 94%" type="text">
 </form>
