other: more semantic HTML, prevent users from reviewing a recipe more than once,

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
-<div class="bg-dark text-light p-2 border-top border-light border-sm">
-  <div class="container-fluid">
+<footer class="bg-dark text-light p-2 border-top border-light border-sm">
+  <nav class="container-fluid">
     <div class="row align-items-end">
       <div class="col-8">
         <h5 class="pl-2 mb-2 text-light">Our team:</h5>
@@ -15,5 +15,5 @@
         </h5>
       </div>
     </div>
-  </div>
-</div>
+  </nav>
+</footer>
