--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,8 @@
 <app-account-modal></app-account-modal>
 
-<div class="bg-dark pt-3 pb-1 border-bottom border-light border-md ">
+<header class="bg-dark pt-3 pb-1 border-bottom border-light border-md ">
   <div class="container-fluid">
-    <div class="row mb-3">
+    <nav class="row mb-3">
 
       <div class="col-sm-6 offset-sm-3 d-none d-md-block d-flex text-center justify-content-center">
         <img id="logo" class="img-fluid mx-auto" routerLink="" alt="logo" src="../../../assets/img/cuisineHELHa_logo.png"
@@ -14,7 +14,7 @@
           <fa (click)="onLoginIconClick()" class="my-auto" name="user-circle" size="3x"></fa>
         </div>
       </div>
-    </div>
+    </nav>
 
     <div class="row no-gutters justify-content-center">
       <div class="col col-12 col-sm-7 col-xl-4 p-2 ">
@@ -22,4 +22,4 @@
       </div>
     </div>
   </div>
-</div>
+</header>
