--- a/src/app/components/pages/recipe-details/recipe-details.component.html
+++ b/src/app/components/pages/recipe-details/recipe-details.component.html
@@ -1,28 +1,32 @@
 <div class="container-fluid col-lg-12 detail-recipe-img pt-3 pb-2">
-  <div class="container-fluid col-lg-3 "></div>
-  <div class="container-fluid border col-lg-8 col-sm-12 text-center shadow bg-detail border border-grey border-lg ">
-    <p class="text-right pt-2" style="font-size: medium">Posted on {{recipe.postDate | date}} by
-      <b>{{recipe.pseudo}}</b>
-    </p>
+  <article class="container-fluid border col-lg-8 col-sm-12 text-center shadow bg-detail border border-grey border-lg ">
+    <section>
+      <p class="text-right pt-2" style="font-size: medium">Posted on {{recipe.postDate | date}} by
+        <b>{{recipe.pseudo}}</b>
+      </p>
 
-    <h3 class="text-center font-weight-bold pt-3 mb-1">{{recipe.nameRecipe}}</h3>
-    <h4 class="pt-2">{{recipe.recipeType}}, {{recipe.persons}} servings ({{recipe.prepTime}} min)</h4>
-    <ng-container *ngIf="spices && spices.length">
-      <span class="mb-2">
-          <ng-container *ngFor="let s of spices">
-            <img height="20" src="../../../../assets/img/chili.png" width="20">
-          </ng-container>
-      </span>
-    </ng-container>
+      <h3 class="text-center font-weight-bold pt-3 mb-1">{{recipe.nameRecipe}}</h3>
+      <h4 class="pt-2">{{recipe.recipeType}}, {{recipe.persons}} servings ({{recipe.prepTime}} min)</h4>
+      <ng-container *ngIf="spices && spices.length">
+        <span class="mb-2">
+            <ng-container *ngFor="let s of spices">
+              <img height="20" src="../../../../assets/img/chili.png" width="20">
+            </ng-container>
+        </span>
+      </ng-container>
 
-    <p class="mt-3">
-      {{recipe.summary}}
-    </p>
+      <p class="mt-3">
+        {{recipe.summary}}
+      </p>
 
-    <img class="rounded-md border border-dark mb-3" height="300" src="../../../../assets/picture/tarteCitron.jpg"
-         width="300">
+      <figure>
+        <img class="rounded-md border border-dark mb-3" height="300" src="../../../../assets/picture/tarteCitron.jpg"
+             width="300" alt="Recipe's picture">
+        <figcaption>Recipe's picture</figcaption>
+      </figure>
+    </section>
 
-    <div class="mb-3">
+    <section class="mb-3">
       <h5 class="font-weight-bold pt-2">Ingredients:</h5>
       <ng-container *ngIf="ingredients && ingredients.length; else noIngredients">
         <ul>
@@ -37,9 +41,9 @@
       <ng-template #noIngredients>
         <h6 class="text-center font-weight-bold">This recipe has no ingredients (mock recipe).</h6>
       </ng-template>
-    </div>
+    </section>
 
-    <div class="mb-3 pt-3 border-top border-grey">
+    <section class="mb-3 pt-3 border-top border-grey">
       <h5 class="font-weight-bold mt-1">Steps:</h5>
       <ng-container *ngIf="steps && steps.length; else noSteps">
         <ul>
@@ -53,11 +57,10 @@
       <ng-template #noSteps>
         <h6 class="text-center font-weight-bold">This recipe has no steps (mock recipe).</h6>
       </ng-template>
-    </div>
+    </section>
 
-    <div class="mb-3 pt-3 border-top border-grey">
+    <section class="mb-3 pt-3 border-top border-grey">
       <h5 class="mb-3 text-center font-weight-bold">Reviews:</h5>
-
       <div class="container mt-3 pt-2">
         <ng-container *ngIf="reviews && reviews.length; else noReview;">
           <ng-container *ngFor="let review of reviews">
@@ -73,7 +76,7 @@
                 <button
                   (click)="deleteReviewInDB(review)"
                   *ngIf="authService.currentUserValue && (authService.currentUserValue.userType || authService.currentUserValue.idUser === review.idUser)"
-                  class="btn btn-sm btn-dark">
+                  class="btn btn-sm btn-danger">
                   Delete review
                 </button>
               </div>
@@ -86,15 +89,24 @@
         </ng-template>
       </div>
 
-      <h5 class="pt-3 mt-4 mb-3 text-center font-weight-bold border-top border-grey">Your review:</h5>
-      <app-review-form (reviewPosted)="postReview($event)"
-                       *ngIf="authService.currentUserValue; else guestUser;"></app-review-form>
+    </section>
+    <aside class="mb-3 pt-3 border-top border-grey">
+      <h5 class="mb-3 text-center font-weight-bold ">Your review:</h5>
+      <ng-container *ngIf="authService.currentUserValue; else guestUser;">
+        <app-review-form *ngIf="!userHasReviewed(); else hasReviewed;" (reviewPosted)="postReview($event)"></app-review-form>
+      </ng-container>
 
       <ng-template #guestUser>
         <span class="mb-3">
           <b>You must login to post a review.</b>
         </span>
       </ng-template>
-    </div>
-  </div>
+
+      <ng-template #hasReviewed>
+        <span class="mb-3">
+          <b>You have already reviewed this recipe.</b>
+        </span>
+      </ng-template>
+    </aside>
+  </article>
 </div>
