--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div style="min-height: 692px;">
+<main style="min-height: 692px;">
   <router-outlet></router-outlet>
-</div>
+</main>
 <app-footer></app-footer>
