--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -1,11 +1,12 @@
-<div class="container-fluid col-lg-12 home-img p-3">
+<article class="container-fluid col-lg-12 home-img p-3">
   <div class="bg-dark-neutral fit-content px-3 py-2 mb-3 border-bottom border-lg shadow border-light rounded">
     <h1 class="text-white align-middle d-inline">Recipe of the month</h1>
   </div>
 
-  <ng-container *ngIf="frontRecipeObs | async as recipe">
-    <div [routerLink]="'/recipe-details/'+recipe.idRecipe" class="card p-2 mb-3 bg-white border border-grey border-md shadow">
-      <div class="row no-gutters">
+
+  <section class="card p-2 mb-3 bg-white border border-grey border-md shadow">
+    <ng-container *ngIf="frontRecipeObs | async as recipe; else recipeLoading;">
+      <div [routerLink]="'/recipe-details/' + recipe.idRecipe" class="row no-gutters">
         <div class="col-sm-4">
           <img alt="A tart" class="card-img" src="../../../../assets/picture/tarteCitron.jpg">
         </div>
@@ -17,7 +18,13 @@
           </div>
         </div>
       </div>
-    </div>
-  </ng-container>
-</div>
-<!---->
+    </ng-container>
+    <ng-template #recipeLoading>
+      <div class="text-center mt-2">
+        <h5><b>The recipe is loading.</b></h5>
+        <h6 class="mt-2">Please, wait.</h6>
+      </div>
+    </ng-template>
+  </section>
+
+</article>
