other: fix icon

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -10,9 +10,9 @@
         </h6>
       </div>
       <div class="col-4 text-right">
-        <h5 class="mb-0">
-          <a class="text-primary" href="https://github.com/CuisinHELHa">Github</a>
-        </h5>
+        <a class="text-primary" href="https://github.com/CuisinHELHa">
+          <img alt="logo" class="img-fluid mx-auto transition-125ms" id="github-icon" routerLink="" src="../../../assets/img/githubIcon.png"/>
+        </a>
       </div>
     </div>
   </nav>
