--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -10,7 +10,7 @@
       </div>
 
       <div class="mt-2 mt-sm-0 col-sm-2 offset-sm-1 d-flex justify-content-end">
-        <div  id="user-icon" class="d-flex p-2 mx-auto mr-2 mt-2 rounded-circle text-light bg-dark-neutral border border-md border-light">
+        <div id="user-icon" class="d-flex  mx-auto p-2 mr-2 mt-2 rounded-circle text-light bg-dark-neutral border border-md border-light">
           <fa (click)="onLoginIconClick()" class="my-auto" name="user-circle" size="3x"></fa>
         </div>
       </div>
