--- a/src/app/components/recipe-result/recipe-result.component.html
+++ b/src/app/components/recipe-result/recipe-result.component.html
@@ -2,9 +2,8 @@
      style="background: rgba(255,255,255,0.20);backdrop-filter: blur(3px);">
   <div class="row">
     <div class="col">
-      <h4>{{recipe.nameRecipe}} (
-        <app-recipe-avg-rate [idRecipe]="recipe.idRecipe"></app-recipe-avg-rate>
-        / 5)
+      <h4>
+        {{recipe.nameRecipe}} (<app-recipe-avg-rate [idRecipe]="recipe.idRecipe"></app-recipe-avg-rate>/ 5)
       </h4>
       <div class="pl-2 mb-1">
         {{recipe.recipeType}}, {{recipe.persons}} servings ({{recipe.prepTime}} min)<br>
