--- a/src/app/components/pages/recipe-search/recipe-search.component.html
+++ b/src/app/components/pages/recipe-search/recipe-search.component.html
@@ -23,7 +23,7 @@
         <h3 class="mb-2"><b>Results for "{{searchText}}"</b></h3>
         <ng-container *ngIf="filteredRecipes && filteredRecipes.length; else noFilteredRecipe">
           <ng-container *ngFor="let recipe of filteredRecipes">
-            <div class="text-left pt-3 mb-2 border-top border-grey p-2">
+            <div class="text-left py-3 px-2 border-top recipe-search-result transition-200ms">
               <app-recipe-result (recipeDeleted)="deleteRecipeInDB($event)" [recipe]="recipe"></app-recipe-result>
             </div>
           </ng-container>
