--- a/src/styles.css
+++ b/src/styles.css
@@ -62,6 +62,10 @@ input:focus, textarea:focus, select:focus {
   transition-duration: 125ms;
 }
 
+.transition-200ms {
+  transition-duration: 200ms;
+}
+
 .transition-250ms {
   transition-duration: 250ms;
 }
