--- a/src/app/components/recipe-result/recipe-result.component.html
+++ b/src/app/components/recipe-result/recipe-result.component.html
@@ -1,5 +1,5 @@
 <div [routerLink]="'/recipe-details/'+recipe.idRecipe" class="container-fluid"
-     style="background: rgba(255,255,255,0.20);backdrop-filter: blur(3px);">
+     style="backdrop-filter: blur(3px);">
   <div class="row">
     <div class="col">
       <h4>
