--- a/src/styles.css
+++ b/src/styles.css
@@ -2,29 +2,70 @@
 @import '~bootstrap/dist/css/bootstrap.min.css';
 @import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
 
+:root {
+  --main-black: #262626;
+  --light-black: #393939;
+
+  --main-white: rgb(241, 241, 241);
+
+  --main-grey: rgb(179, 179, 179);
+  --light-grey: rgb(250, 250, 250);
+
+  --time-instant: 125ms;
+  --time-quick: 200ms;
+  --time-slow: 500ms;
+  --time-slower: 1000ms;
+
+  --body-height: 692px;
+}
+
 body {
   font-family: 'Lato', sans-serif;
 }
 
-input:focus, textarea:focus, select:focus {
-  outline: none;
+
+
+.bg-dark {
+  background-color: var(--main-black) !important;
 }
 
-.main-color {
-  background-color: #000000;
+.bg-dark-neutral {
+  background-color: var(--light-black) !important;
 }
 
-#recipe-search-bar {
-  background-color: #000000;
-}
 
-.align-y-center {
-  margin-top: 50%;
-}
 
 .border-light {
-  border-color: #e9e9e9;
+  border-color: var(--main-white) !important;
 }
+
+.border-grey {
+  border-color: var(--main-grey) !important;
+}
+
+.border-dark {
+  border-color: var(--main-black) !important;
+}
+
+
+
+.transition-125ms {
+  transition-duration: var(--time-instant);
+}
+
+.transition-250ms {
+  transition-duration: var(--time-quick);
+}
+
+.transition-500ms {
+  transition-duration: var(--time-slow);
+}
+
+.transition-1s {
+  transition-duration: var(--time-slower);
+}
+
+
 
 .border-sm {
   border-width: 0.12em !important;
@@ -38,47 +79,17 @@ input:focus, textarea:focus, select:focus {
   border-width: 0.22em !important;
 }
 
-.bg-dark {
-  background-color: #262626 !important;
+
+
+input:focus, textarea:focus, select:focus {
+  outline: none;
 }
 
-.bg-dark-neutral {
-  background-color: #393939 !important;
+.align-y-center {
+  margin-top: 50%;
 }
 
-.border-light {
-  border-color: rgb(241, 241, 241) !important;
-}
-
-.border-grey {
-  border-color: rgb(179, 179, 179) !important;
-}
-
-.border-dark {
-  border-color: #262626 !important;
-}
-
-.transition-125ms {
-  transition-duration: 125ms;
-}
-
-.transition-200ms {
-  transition-duration: 200ms;
-}
-
-.transition-250ms {
-  transition-duration: 250ms;
-}
-
-.transition-500ms {
-  transition-duration: 500ms;
-}
-
-.transition-1s {
-  transition-duration: 1000ms;
-}
-
-.fit-content{
+.fit-content {
   width: fit-content;
   height: fit-content;
 }
