other: improve UX (shadows, fixed sizes, use more CSS variables, etc.)

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="bg-dark text-light p-2 border-top border-light border-sm">
+<footer class="bg-dark text-light p-2 shadow">
   <nav class="container-fluid">
     <div class="row align-items-end">
       <div class="col-8">
@@ -11,7 +11,7 @@
       </div>
       <div class="col-4 text-right">
         <a class="text-primary" href="https://github.com/CuisinHELHa">
-          <img alt="logo" class="img-fluid mx-auto transition-125ms" id="github-icon" routerLink="" src="../../../assets/img/githubIcon.png"/>
+          <img alt="logo" class="img-fluid mx-auto transition-125ms" id="github-icon" routerLink="" src="../../../assets/img/github-icon.png"/>
         </a>
       </div>
     </div>
