--- a/src/app/components/pages/recipe-search/recipe-search.component.html
+++ b/src/app/components/pages/recipe-search/recipe-search.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid col-lg-12 imgHome p-2 mt-3">
+<div class="container-fluid col-lg-12 imgHome p-2 pt-4">
   <div class="p-2 container-fluid border col-lg-7 col-sm-12 text-center"
        style="background: rgba(255,255,255,0.60);backdrop-filter: blur(3px);">
     <div class="row">
