--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<main style="min-height: 692px;">
+<main>
   <router-outlet></router-outlet>
 </main>
 <app-footer></app-footer>
