--- a/src/styles.css
+++ b/src/styles.css
@@ -8,21 +8,28 @@
 
   --main-white: rgb(241, 241, 241);
 
+  --dark-grey: rgb(143, 143, 143);
   --main-grey: rgb(179, 179, 179);
   --light-grey: rgb(250, 250, 250);
+
+  --red: rgb(246 136 136);
 
   --time-instant: 125ms;
   --time-quick: 200ms;
   --time-slow: 500ms;
   --time-slower: 1000ms;
 
-  --body-height: 692px;
+  --body-height: 666px;
 }
 
 body {
   font-family: 'Lato', sans-serif;
+  background-color: var(--light);
 }
 
+.opacity-90{
+  opacity: 0.9;
+}
 
 
 .bg-dark {
@@ -31,6 +38,22 @@ body {
 
 .bg-dark-neutral {
   background-color: var(--light-black) !important;
+}
+
+.bg-dark-grey {
+  background-color: var(--main-grey) !important;
+}
+
+.bg-grey {
+  background-color: var(--main-grey) !important;
+}
+
+.bg-light-grey {
+  background-color: var(--light-grey) !important;
+}
+
+.bg-red{
+  background-color: var(--red) ;
 }
 
 
