fix: pages' body heights

--- a/src/app/components/pages/recipe-create/recipe-create.component.css
+++ b/src/app/components/pages/recipe-create/recipe-create.component.css
@@ -1,6 +1,6 @@
-.imgBack{
+.back-img{
   background: url("../../../../assets/img/create-recipe-full.jpg") center;
   background-size: cover;
-  min-height: var(--body-height);
+  min-height: 698px;
 }
 
