--- a/src/app/components/pages/recipe-create/recipe-create.component.html
+++ b/src/app/components/pages/recipe-create/recipe-create.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid col-lg-12 imgBack p-2 pt-3">
+<div class="container-fluid col-lg-12 back-img p-2 pt-3">
 
 
   <div class="container-fluid col-lg-3">
