--- a/src/app/components/pages/user-details/user-details.component.html
+++ b/src/app/components/pages/user-details/user-details.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid col-lg-12 userBG p-2 pt-3">
+<div class="container-fluid col-lg-12 user-bg p-2 pt-3">
   <div class="container-fluid border border-md border-grey col-lg-7 col-sm-12 pt-3"
        style="min-height: 550px;background: rgba(255,255,255,0.80);backdrop-filter: blur(3px);">
     <h2 class="ml-2 mb-2 text-center"><b>Your details</b></h2>
